# ipoagent

./: .gitignore  README.md  best_domain_specialists.csv  best_workflow_specialists.csv  debug_mimo_env.py  domain_advantage.csv  domain_heatmap.csv  domain_rank_matrix.csv  domain_rankings.csv  domain_scores_by_model.csv  overall_leaderboard.csv  pyproject.toml  qwen37maxspacex70.log.save  requirements.txt  rubrics_checked.json  rubrics_enriched.json  rubricsout.json  workflow_advantage.csv  workflow_heatmap.csv  workflow_rank_matrix.csv  workflow_rankings.csv  workflow_scores_by_model.csv  xiaomitest.py
.benchmark_cache/: 1c087ecccbab.pkl  2bbb99d94ba4.pkl  4740e5d66545.pkl  59ef1eb5b91a.pkl  5eb02e713089.pkl  5fc99c698ed6.pkl  893bb31abf9b.pkl  ba07c17e9d9d.pkl  c308e3c467ca.pkl  ce700af19c40.pkl  e730afb2293b.pkl
data/: public.csv  public.txt  public_spacex.txt  public_spacex_70.txt  public_spacex_bloat.txt  public_spacex_small.txt  public_spacex_small2.txt  questions_taxonomy.csv  questions_taxonomy.csv.bak
facts/: consolidated_facts.json  glm-5.1.small2-facts.json  glm-test-facts.json  glm51_facts.json  glm52_facts.json  glm_facts.json  kimi-test-facts.json  kimi_facts.json  mimo-test-facts.json  mimo_facts.json  qwen_facts.json  test-consolidate.json
finance_agent/: __init__.py  allstagesconcat.py  contexts.py  custom_model.py  edit_results.py  embeddings.py  exceptions.py  fact_normalizer.py  fix_taxonomy.py  generaterubrics.py  generaterubrics2.py  get_agent.py  get_agent_old.py  grading.py  grading2.py  grading3.py  pipeline_shared.py  prompt.py  (+42 more)
(+2984 files in other folders)
