[project]
name = "finance-agent"
authors = [
  { name = "Vals AI, Inc.", email = "contact@vals.ai" },
]
version = "0.1.0"
description = "Finance Agent Benchmark Codebase"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.13.2",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "sec-api>=1.0.32",
    "model-library==0.1.25",
    "tavily-python>=0.7.23",
    "simpleeval>=1.0.7",
    "torch>=2.12.0",
    "numpy>=2.4.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "flagembedding>=1.4.0",
    "langchain-text-splitters>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_agent"]

[dependency-groups]
dev = [
  # style
  "ruff",
  "basedpyright",
  # env
  "dotenv",
]

[project.scripts]
finance-agent = "finance_agent.run_agent:main_sync"

[tool.basedpyright]
exclude = [
  "data/*",
  ".*",
]
typeCheckingMode = "basic"
reportExplicitAny = false
